--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
+    "phosphor-react": "^1.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
