--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.8.5",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "firebase": "^9.6.7",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "phosphor-react": "^1.4.1",
