--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
-  "name": "agroforestry-hub",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.5",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "firebase": "^9.6.7",
-    "formik": "^2.2.9",
-    "formik-chakra-ui": "^1.6.0",
-    "framer-motion": "^6.2.8",
-    "next": "12.1.0",
-    "phosphor-react": "^1.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.18",
-    "@types/react": "17.0.39",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.5.5"
-  }
+	"name": "agroforestry-hub",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build && next export",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@chakra-ui/icons": "^1.1.7",
+		"@chakra-ui/react": "^1.8.5",
+		"@emotion/react": "^11.8.1",
+		"@emotion/styled": "^11.8.1",
+		"firebase": "^9.6.7",
+		"formik": "^2.2.9",
+		"formik-chakra-ui": "^1.6.0",
+		"framer-motion": "^6.2.8",
+		"next": "12.1.0",
+		"phosphor-react": "^1.4.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"yup": "^0.32.11"
+	},
+	"devDependencies": {
+		"@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+		"@types/node": "17.0.18",
+		"@types/react": "17.0.39",
+		"eslint": "8.9.0",
+		"eslint-config-next": "12.1.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-i18next": "^6.0.1",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.32.2",
+		"prettier": "^2.8.8",
+		"typescript": "4.5.5"
+	}
 }
